[tool.poetry]
name = "repl_python3_Game-for-Robotics-1-Just-in-case-we-need-a-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
pygame = "^2.0.2"
repl = "^1.0"
replit = "^3.2.4"
getkey = "^0.6.5"
cursor = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
